# claude-code-statusline

./: CLAUDE.md  Cargo.toml  README.ja.md  README.md  config.default.toml
crates/claude-code-statusline-components/: Cargo.toml  README.ja.md  README.md
crates/claude-code-statusline-components/src/: color.rs  count.rs  countdown.rs  currency.rs  duration.rs  indicator.rs  label.rs  lib.rs  path.rs  progress_bar.rs
crates/claude-code-statusline-model/: Cargo.toml  README.ja.md  README.md
crates/claude-code-statusline-model/src/: lib.rs
crates/claude-code-statusline-widgets/: Cargo.toml  README.ja.md  README.md
crates/claude-code-statusline-widgets/src/: agent_info.rs  context_usage.rs  cost_summary.rs  git_branch.rs  lib.rs  model_info.rs  rate_limit.rs  token_alert.rs  vim_status.rs  workspace_info.rs  worktree_info.rs
src/: builder.rs  config.rs  main.rs
