[workspace]
resolver = "3"
members = ["crates/*"]

[package]
name = "claude-code-statusline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claude-code-statusline"
path = "src/main.rs"

[dependencies]
claude-code-statusline-model = { path = "crates/claude-code-statusline-model" }
claude-code-statusline-components = { path = "crates/claude-code-statusline-components" }
claude-code-statusline-widgets = { path = "crates/claude-code-statusline-widgets" }
serde_json = "1"
toml = "1.0.7"
serde = { version = "1.0.228", features = ["derive"] }
